update in regression model notes

--- a/Course 1 (Supervised ML - Regression & Classification)/Week 1/2. Regression Model.md
+++ b/Course 1 (Supervised ML - Regression & Classification)/Week 1/2. Regression Model.md
@@ -1,36 +1,83 @@
-# Linear Regression Model:
-- Fitting a straight line to the data to predict new data inputs
-- It is a regression model because it predicts numbers as the output.
-- Any model that predicts numbers as output is addressing what is called a `Regression Problem`.
-- Linear regression is one of the regression models ,but there is other models that addresses the regression problem too.
-![alt text](/Images/LinearRegressionModelGraph.png)
- ## Regression vs Classification models
- - Regression models predicts possibly an infinite numbers of output
- - Classification models predicts a discrete finite set of outputs ex(Cate,Dog).
+# Linear Regression and Regression Models
 
- ## Training Set Notation
-- The data that is used to train the model is called `Training Set`.
-- The inputs usually called `x, features, input features`.
-- The outputs usually called `y, output, target`,
-- The number of training examples(rows) is called `m`
-- ![Training set](/Images/TrainingSet.png)
+---
+
+## Linear Regression Model
+- **Linear Regression** fits a straight line to data to predict continuous numeric values.
+- It solves a **Regression Problem**, where the model's output is a continuous number.
+- Any model that predicts continuous values is addressing a Regression Problem.
+- Linear Regression is one example of a regression model; however, there are other models that solve regression problems as well, such as Polynomial Regression, Decision Trees, etc.
+
+![Linear Regression Model Graph](/Images/LinearRegressionModelGraph.png)
+*Figure: Example of fitting a straight line to data using Linear Regression.*
+
+---
+
+## Regression vs Classification Models
+| Regression Models                                   | Classification Models                             |
+|-----------------------------------------------------|---------------------------------------------------|
+| Predict continuous numeric outputs.                 | Predict discrete finite set of outputs (e.g., Cat, Dog). |
+| Can output an infinite range of values.             | Outputs belong to predefined categories or labels. |
+
+---
+
+## Training Set Notation
+- The dataset used to train the model is called the **Training Set**.
+- **Inputs (x)** are also called **features** or **input features**.
+- **Outputs (y)** are also known as **targets**, **labels**, or **output values**.
+- The number of training examples (rows) is denoted by **m**.
+
+![Training Set Example](/Images/TrainingSet.png)
+*Figure: Example structure of a training set with inputs (x) and outputs (y).*
+
+---
 
 ## Model Training Process
-- The training process happens by feeds the model with the training set (inputs (features) and outputs (targets))  to the learning algorithm , then the learning algorithm will produce a function (the model) that will take the input(x) and produce an estimate or a prediction `y-hat` 
-- ![Training Linear Regression Process](/Images/LinearRegressionTraining.png)
+- The training process involves **feeding the model with the training set** (input features and target outputs).
+- A **learning algorithm** processes this data and produces a **function (the model)** that maps an input \(x\) to a predicted output y-hat (ŷ).
+  
+![Training Linear Regression Process](/Images/LinearRegressionTraining.png)
+*Figure: Process of training a Linear Regression Model.*
 
-## Cost Function:
-- It tells how good the model is performing.
-- The goal is to minimize it as possible.
-### Model Parameters(W and B) :
-- `y = wx + b`, `w` and `b` are the model parameters, we change them until the line fits our data well then it should
-be ready to predict real data `y-hat`.
-- look how the values of w and b parameters changing the line
-- ![Model Parameters](/Images/ModelParameters.png)
-### How well the line fits the training data
-- To see how good our model is performing, we use the cost function
-- It measures the gap between the predicted values and the actual true values.
-- the most widly used cost function is the `Squared Error Cost Function` shown in the photo.
-- ![Squared Error Cost Function](/Images/ModelParameters.png)
-- ![Cost Function Values Example](/Images/CostFunctionExamplePlot.png)
-- So the role of the linear regression model is to find the values of `w` and `b` that results in the lowest value of the cost function `J(w,b)`.
+---
+
+## Model Parameters (w and b)
+- The linear regression model is defined by the equation:  
+  \[
+  y = wx + b
+  \]
+  where:
+  - **w** is the weight (slope of the line)
+  - **b** is the bias (y-intercept)
+- These are called **model parameters**.
+- During training, we adjust w and b to minimize the prediction error.
+- Once the best parameters are found, the model can predict new values y-hat (ŷ).
+
+![Model Parameters](/Images/ModelParameters.png)
+*Figure: Visualization of how changing w (slope) and b (bias) affects the fitted line.*
+
+---
+
+## Cost Function
+- The **Cost Function** is a measure of how well the model's predictions align with the actual data.
+- It quantifies the "gap" between predicted values y-hat (ŷ) and actual values \(y\).
+- The objective during training is to **minimize the cost function**.
+  
+### Squared Error Cost Function:
+The most commonly used cost function for Linear Regression is the **Mean Squared Error (MSE)**, defined as:
+\[
+J(w, b) = \frac{1}{2m} \sum_{i=1}^{m} \left( \hat{y}^{(i)} - y^{(i)} \right)^2
+\]
+where:
+- \(m\) is the number of training examples.
+- \(\hat{y}^{(i)}\) is the predicted value for the \(i^{th}\) example.
+- \(y^{(i)}\) is the actual true value for the \(i^{th}\) example.
+
+![Squared Error Cost Function](/Images/ModelParameters.png)
+*Figure: Formula of the Squared Error Cost Function.*
+
+![Cost Function Example Plot](/Images/CostFunctionExamplePlot.png)
+*Figure: Visual representation of how different parameter values affect the cost function.*
+
+- The role of the training process is to find the optimal values of **w** and **b** that minimize the cost function \(J(w, b)\).
+
