update in regression model  summary

--- a/Course 1 (Supervised ML - Regression & Classification)/Week 1/2. Regression Model.md
+++ b/Course 1 (Supervised ML - Regression & Classification)/Week 1/2. Regression Model.md
@@ -34,8 +34,8 @@
 
 ## Model Training Process
 - The training process involves **feeding the model with the training set** (input features and target outputs).
-- A **learning algorithm** processes this data and produces a **function (the model)** that maps an input \(x\) to a predicted output y-hat (ŷ).
-  
+- A **learning algorithm** processes this data and produces a **function (the model)** that maps an input **x** to a predicted output **y-hat (ŷ)**.
+
 ![Training Linear Regression Process](/Images/LinearRegressionTraining.png)
 *Figure: Process of training a Linear Regression Model.*
 
@@ -43,15 +43,15 @@
 
 ## Model Parameters (w and b)
 - The linear regression model is defined by the equation:  
-  \[
-  y = wx + b
-  \]
+  ```
+  y = w * x + b
+  ```
   where:
   - **w** is the weight (slope of the line)
   - **b** is the bias (y-intercept)
 - These are called **model parameters**.
-- During training, we adjust w and b to minimize the prediction error.
-- Once the best parameters are found, the model can predict new values y-hat (ŷ).
+- During training, we adjust **w** and **b** to minimize the prediction error.
+- Once the best parameters are found, the model can predict new values, denoted as **y-hat (ŷ)**.
 
 ![Model Parameters](/Images/ModelParameters.png)
 *Figure: Visualization of how changing w (slope) and b (bias) affects the fitted line.*
@@ -60,18 +60,18 @@
 
 ## Cost Function
 - The **Cost Function** is a measure of how well the model's predictions align with the actual data.
-- It quantifies the "gap" between predicted values y-hat (ŷ) and actual values \(y\).
+- It quantifies the "gap" between predicted values **y-hat (ŷ)** and actual values **y**.
 - The objective during training is to **minimize the cost function**.
-  
+
 ### Squared Error Cost Function:
 The most commonly used cost function for Linear Regression is the **Mean Squared Error (MSE)**, defined as:
-\[
-J(w, b) = \frac{1}{2m} \sum_{i=1}^{m} \left( \hat{y}^{(i)} - y^{(i)} \right)^2
-\]
+```
+J(w, b) = (1 / 2m) * Σ (ŷ(i) - y(i))²
+```
 where:
-- \(m\) is the number of training examples.
-- \(\hat{y}^{(i)}\) is the predicted value for the \(i^{th}\) example.
-- \(y^{(i)}\) is the actual true value for the \(i^{th}\) example.
+- **m** is the number of training examples.
+- **ŷ(i)** is the predicted value for the i-th example.
+- **y(i)** is the actual true value for the i-th example.
 
 ![Squared Error Cost Function](/Images/ModelParameters.png)
 *Figure: Formula of the Squared Error Cost Function.*
@@ -79,5 +79,4 @@ where:
 ![Cost Function Example Plot](/Images/CostFunctionExamplePlot.png)
 *Figure: Visual representation of how different parameter values affect the cost function.*
 
-- The role of the training process is to find the optimal values of **w** and **b** that minimize the cost function \(J(w, b)\).
-
+- The role of the training process is to find the optimal values of **w** and **b** that minimize the cost function **J(w, b)**.
