--- a/Course 1 (Supervised ML - Regression & Classification)/Week 2/1.Multiple Linear Regression.md
+++ b/Course 1 (Supervised ML - Regression & Classification)/Week 2/1.Multiple Linear Regression.md
@@ -2,35 +2,34 @@
 
 ## Concept
 - In single-feature linear regression:  
-  \( f(x) = wx + b \)  
+  `f(x) = w * x + b`  
 - In multiple-feature linear regression:  
-  \( f(x) = w_1x_1 + w_2x_2 + \dots + w_nx_n + b \)  
+  `f(x) = w1 * x1 + w2 * x2 + ... + wn * xn + b`  
 - **Vectorized form**:  
-  \( f(\mathbf{x}) = \mathbf{w} \cdot \mathbf{x} + b \)  
+  `f(x) = w · x + b`  
   where:
-  - \( \mathbf{w} \) is a vector of all weights \( w_i \)
-  - \( \mathbf{x} \) is a vector of all features \( x_i \)
-
+  - `w` is a vector of all weights `wi`
+  - `x` is a vector of all features `xi`
 ---
 
 # Vectorization
 
 ## Normal way vs. Vectorization
 - **Normal way**:  
-  Multiply each \( x_i \) by its corresponding \( w_i \), sum them, then add \( b \). This requires a loop for \( n \) features.
+  Multiply each `x_i` by its corresponding `w_i`, sum them, then add `b`.  
+  This requires a loop for `n` features.
 - **Vectorized way**:  
-  Compute the dot product \( \mathbf{w} \cdot \mathbf{x} \) in a single step, then add \( b \).  
+  Compute the dot product `w · x` in a single step, then add `b`.  
   Example with NumPy:  
   ```python
   f = np.dot(w, x) + b
   ```
 - **Why it’s faster**:
   - Avoids explicit loops in Python.
-  - NumPy’s `dot()` leverages low-level optimized code and parallel hardware.
+  - NumPy’s `dot()` uses low-level optimized code and can run operations in parallel on hardware.
 
 ![Vectorization using numpy](/Images/NumpyVictorization.png)  
 *Figure: Normal implementation vs. NumPy vectorized implementation.*
-
 ---
 
 ## Why Vectorization is Better
@@ -42,6 +41,8 @@
 ![Without Vectorization VS Vectorization behind the scenes](/Images/VictorizationBehindTheScenes.png)  
 *Figure: How vectorization speeds up computations using parallel processing.*
 
+![Victorization and normal way results](/Images/MeasureVictorizationVSNormalWay.png)  
+*Figure: Showing the results of using victorization and normal way.*
 ---
 
 ## Vectorization with Gradient Descent
@@ -56,13 +57,22 @@
 ![Gradient Descent using victorization](/Images/GradientDescentWithVictorization.png)  
 *Figure: Impact of vectorization on gradient descent speed.*
 
+
+
 ---
 
 # Gradient Descent for Multiple Linear Regression
-- Same principle as single-feature case but applied to vectors.
-- Update rule in vectorized form:
-  \[
-  \mathbf{w} := \mathbf{w} - \alpha \frac{\partial J}{\partial \mathbf{w}}, \quad b := b - \alpha \frac{\partial J}{\partial b}
-  \]
+- Same principle as the single-feature case but applied to vectors.
+- **Update rule in vectorized form**:  
+  ```
+  w := w - α * (∂J/∂w)
+  b := b - α * (∂J/∂b)
+  ```
+  - where `w` is a vector containing the model parameters
 - Vectorization ensures efficient updates even with thousands of features.
 
+![Vectorized Gradient Descent](/Images/VectorizedGradientDescent.png)  
+*Figure: Showing the notation of the gradient descent with the vector notation.*
+
+![Vectorized Gradient Descent2](/Images/C1_W2_VectorizedGradientDescentNotation.png)  
+*Figure: Showing the notation of the gradient descent with the vector notation.*
