--- a/Course 1 (Supervised ML - Regression & Classification)/Week 3 - Classification/2. Cost Function For Logistic Regression.md
+++ b/Course 1 (Supervised ML - Regression & Classification)/Week 3 - Classification/2. Cost Function For Logistic Regression.md
@@ -1,43 +1,68 @@
-# Squared Error Cost Function For Logistic Regression
-- It turns out that the `Squared Error` cost function is not suitable for logistic regression with gradient descent.
-- The reason is due to that logistic regression is not linear nature and when we plot the cost function it has a `Non-Convex` shape,
-and we also know that gradient descent is trying to reach he global local minum in the Convex shape,
-so when we use this cost function it will reach only the first local minimum it founds and it will never reach the global minimu.
+# Squared Error Cost Function for Logistic Regression
+- The **squared error cost function** (used in linear regression) is **not suitable** for logistic regression.  
+- Reason: Logistic regression is **nonlinear**, so the squared error cost produces a **non-convex** function.  
+- Gradient descent works best with **convex cost functions**, where it can find the **global minimum**.  
+- With a non-convex cost, gradient descent may get stuck in a **local minimum**.
 
-![Squared Error Cost Function for logistic regression](/Images/C1_W3_SquarredErrorCost.png)  
-*Figure: Squared Error Cost Function for Rogistic Regression.*  
+![Squared Error Cost Function for Logistic Regression](/Images/C1_W3_SquarredErrorCost.png)  
+*Figure: Squared Error Cost Function for Logistic Regression.*
 
-# Cost Function For Logisict Regression
-- To make the cost function for linear regression takes a convex shape inorder to make the grandient descent converge to the global minimum
-we will update the cost function like this:  
-## Lose Function 
-**Loss** is a measure of the difference of a single example to its target value while the  
-**Cost** is a measure of the losses over the training set
-- We will extract the inner part of the cost function and call it a `Loss Function`.
-- And this Loss Function has two parts based on the label y like in the figure.
-- The loss function is a measure of one training example.
-- Because logistic regression output ranges from 0 to 1 so in the figure we will take the shape part from 0 to one.
-- When `Y` is equal to one and the predicted value is equal to one the Loss Function is 0, and when it equal to 0, The loss function is infinity.
-![Loss Function with Y = 1](/Images/C1_W3_LossFunction_Y1.png)   
-*Figure: Loss Function when Y is equal to 1*  
+---
 
-- When `Y` is equal to zero and the predicted value is equal to zero the Loss Function is 0, and when it equal to 1, The loss function is infinity.
-![Loss Function with Y = 0](/Images/C1_W3_LossFunction_Y0.png)  
-*Figure: Loss Function when Y is equal to 0* 
+# Cost Function for Logistic Regression
 
-- The defining feature of this loss function is the fact that it uses two separate curves. One for the case when the target is zero or ($y=0$) and another for when the target is one ($y=1$). Combined, these curves provide the behavior useful for a loss function, namely, being zero when the prediction matches the target and rapidly increasing in value as the prediction differs from the target.
-- So now after we have update the cost function, now it is ready to be used for logistic regression and it will have the convex shape to make GD converge to the global minmum.
+## Loss vs. Cost
+- **Loss function**: Error for a **single training example**.  
+- **Cost function**: Average of the losses across the **entire training set**.  
+
+---
+
+## Logistic Regression Loss Function
+- To ensure convexity, we redefine the **loss function** as follows:  
+
+- When **y = 1**:  
+  - Loss is **0** if prediction ≈ 1.  
+  - Loss grows very large if prediction ≈ 0.  
+
+![Loss Function with y = 1](/Images/C1_W3_LossFunction_Y1.png)  
+*Figure: Loss Function when y = 1.*
+
+- When **y = 0**:  
+  - Loss is **0** if prediction ≈ 0.  
+  - Loss grows very large if prediction ≈ 1.  
+
+![Loss Function with y = 0](/Images/C1_W3_LossFunction_Y0.png)  
+*Figure: Loss Function when y = 0.*
+
+➡️ The key idea: The loss uses **two different curves** depending on the label (`y=0` or `y=1`).  
+This ensures:
+- Loss = 0 when prediction matches the target.  
+- Loss increases rapidly when prediction differs from the target.  
+
+---
+
+## Logistic Regression Cost Function
+- The overall **cost function** is the average of the above losses.  
+- This function is **convex**, which guarantees that **gradient descent converges to the global minimum**.  
+
 ![Cost Function for Logistic Regression](/Images/C1_W3_CostFunctionForLogisticRegression.png)  
-*Figure: Cost Function for Logistic Regression* 
+*Figure: Convex Cost Function for Logistic Regression.*
 
-# Simplified Loss Function For Logisitc Regression
-- Instead of separating the loss function in two parts based on either y is one or zero 
-we will combine them in one simplified version as:
+---
+
+# Simplified Forms
+
+## Simplified Loss Function
+- Instead of splitting into two cases (`y=0` or `y=1`), we can combine them into a **single formula**.  
+
 ![Simplified Loss Function for Logistic Regression](/Images/C1_W3_SimplifiedLossFunction.png)  
-*Figure: Simplified Loss Function for Logistic Regression* 
+*Figure: Simplified Logistic Regression Loss Function.*
 
-# Simplified Cost Function For Logisitic Regression
-- This cost function is derived from statics using a statistical princible called `Maximum Likelihood Estimation`
+---
+
+## Simplified Cost Function
+- Derived from **statistics** using a principle called **Maximum Likelihood Estimation (MLE)**.  
+- This is the most commonly used cost function for logistic regression.  
+
 ![Simplified Cost Function for Logistic Regression](/Images/C1_W3_SimplifiedCostFunction.png)  
-*Figure: Simplified Cost Function for Logistic Regression* 
-
+*Figure: Simplified Logistic Regression Cost Function.*
